--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Click the oreo",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brian Sayler",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel-bundler": "^1.10.2"
+  }
 }
