--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
+    "format": "prettier --write \"src/**/*.{js,jsx,css,json}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brian Sayler",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.10.2"
+    "parcel-bundler": "^1.10.2",
+    "prettier": "^1.14.3"
   },
   "dependencies": {
     "react": "^16.5.2",
