--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "prettier": "^1.14.3"
   },
   "dependencies": {
+    "parcel-plugin-inlinesvg": "0.0.14",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-svg-inline": "^2.1.1"
   }
 }
