--- a/package.json
+++ b/package.json
@@ -12,10 +12,23 @@
   },
   "author": "Brian Sayler",
   "license": "ISC",
+  "jest": {
+    "moduleNameMapper": {
+      "^[./a-zA-Z0-9$_-]+\\.css|.svg$": "<rootDir>/empty-module.js"
+    }
+  },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "gh-pages": "^2.0.1",
+    "jest": "^23.6.0",
     "parcel-bundler": "^1.10.2",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "react-test-renderer": "^16.5.2"
   },
   "dependencies": {
     "parcel-plugin-inlinesvg": "0.0.14",
