--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jest": "^23.6.0",
     "parcel-bundler": "^1.10.2",
     "prettier": "^1.14.3",
-    "react-test-renderer": "^16.5.2"
+    "react-test-renderer": "^16.5.2",
+    "react-testing-library": "^5.2.0"
   },
   "dependencies": {
     "parcel-plugin-inlinesvg": "0.0.14",
