--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,10 @@
     ],
     "react"
   ],
-  "plugins": ["transform-class-properties"],
+  "plugins": [
+    "transform-class-properties",
+    "babel-plugin-transform-object-rest-spread"
+  ],
   "env": {
     "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
