--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "gh-pages": "^2.0.1",
+    "install": "^0.12.1",
     "jest": "^23.6.0",
+    "npm": "^6.4.1",
     "parcel-bundler": "^1.10.2",
     "prettier": "^1.14.3",
     "react-test-renderer": "^16.5.2",
     "react-testing-library": "^5.2.0"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "parcel-plugin-inlinesvg": "0.0.14",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
